<resources>
    <string name="app_name">自定义控件</string>
    <string name="action_feed">意见反馈</string>
    <string name="action_group_chat">发起群聊</string>
    <string name="action_add_friend">添加朋友</string>
    <string name="action_scan">扫一扫</string>
    <string name="action_search">搜索</string>
    <string name="action_add">添加</string>
    <string name="tab_weixin">微信</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_find">发现</string>
    <string name="tab_me">我</string>


    <string name="seven_days">"七日年化收益"</string>
    <string name="year_income">"预期年化收益："</string>
    <string name="Invest_days">"投资天数"</string>
    <string name="lowest_money">"起投金额"</string>
    <string name="bank_current">"为银行活期"</string>
    <string name="personal_quota">"个人限额"</string>
    <string name="start_days">"投资起始日"</string>
    <string name="end_days">"投资结束日"</string>
    <string name="repayment_style">"回款方式"</string>
    <string name="fee_money">"手续费"</string>
    <string name="product_Instructions">"产品说明书"</string>
    <string name="security">"安全保障"</string>
    <string name="service">"微信6.3.30版自动抢红包"</string>
    <string name="description">"开启后将自动抢红包"</string>
</resources>
